--- a/configuration.yml
+++ b/configuration.yml
@@ -1,2 +1,19 @@
 template: Hello, %s!
 defaultName: Stranger
+
+database:
+  driverClass: com.mysql.cj.jdbc.Driver
+  user: root
+  password: secret-pw
+  url: "jdbc:mysql://0.0.0.0:3306/information_schema"
+  properties:
+    charSet: UTF-8
+  maxWaitForConnection: 1s
+  validationQuery: "/* MyService Health Check */ SELECT 1"
+  validationQueryTimeout: 3s
+  minSize: 8
+  maxSize: 32
+  checkConnectionWhileIdle: false
+  evictionInterval: 10s
+  minIdleTime: 1 minute
+
