--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>uk.me.ajv.energykafka.HelloWorldApplication</mainClass>
+                  <mainClass>uk.me.ajv.energykafka.EnergyApp</mainClass>
                 </transformer>
               </transformers>
             </configuration>
@@ -262,7 +262,6 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>${lombok.version}</version>
-      <scope>provided</scope>
     </dependency>
 
     <!-- Databases drivers -->
